<?xml version="1.0"?>
<package format="3">
  <name>turtlebot3_simple_navigator</name>
  <version>0.1.0</version>
  <description>Simple wandering and obstacle avoidance behavior for TurtleBot3 in ROS 2</description>
  <maintainer email="benedettapacilli@gmail.com">Benedetta</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>